# ideal-lamp

./: .gitmodules  CMakeLists.txt  main.cpp
include/: engine.hpp  util.hpp
include/engine/graphics/: Error.hpp  Instance.hpp  Window.hpp
include/util/: Factory.hpp
src/: CMakeLists.txt
src/engine/graphics/: Error.cpp  Instance.cpp  UtilSDL.cpp  Window.cpp
